--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/node": "^14.0.5",
     "express": "^4.17.1",
+    "fast-sha256": "^1.3.0",
+    "md5-typescript": "^1.0.5",
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.10.2",
+    "tweetnacl-util": "^0.15.1",
     "typeorm": "^0.2.25"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
+    "typeorm:migration:run": "npm run typeorm -- migration:run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
