--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-maps": "^2.1.0",
     "reflect-metadata": "^0.1.13",
+    "tailwindcss": "^1.4.6",
     "ts-node": "^8.10.2",
     "tweetnacl-util": "^0.15.1",
     "typeorm": "^0.2.25"
@@ -30,6 +33,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
+    "build:style":"tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "postcss-cli": "^7.1.1",
     "typescript": "^3.9.3"
   }
 }
