--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/material-ui": "^0.21.7",
     "@types/node": "^14.0.5",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "fast-sha256": "^1.3.0",
+    "material-ui": "^0.20.2",
     "md5-typescript": "^1.0.5",
     "pg": "^8.2.1",
     "react": "^16.13.1",
@@ -20,6 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.0",
+    "react-tap-event-plugin": "^3.0.3",
+    "react-tooltip": "^4.2.6",
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^1.4.6",
     "ts-node": "^8.10.2",
@@ -33,7 +38,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
-    "build:style":"tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
